<resources>
    <string name="app_name">HEALTH 1ST</string>
    <!-- Basic Permission String -->
    <string name="Basic_Permission_Information">어플리케이션에 필요한 권한을 승인하지 않는다면 해당 어플리케이션을 정상적으로 이용하실 수 없습니다. "설정" 화면을 통해서 필요한 권한을 승인해주세요.</string>
    <!-- Main Helper String -->
    <string name="Main_Helper_Name">보호자 이름</string>
    <string name="Main_Helper_Address">보호자 주소</string>
    <string name="Main_Helper_Tel">보호자 번호</string>
    <string name="Main_Helper_Call">전화하기</string>
    <!-- Main Patient String -->
    <string name="Main_Patient_SOS_Call">SOS 전화하기</string>
    <string name="Main_Patient_SOS_Message">SOS 문자하기</string>
    <string name="Main_Patient_State_1">정상</string>
    <string name="Main_Patient_State_2">위험</string>
    <string name="Main_Patient_State_3">긴급</string>
    <string name="Main_Patient_ToDo_Hint">할일을 입력해주세요.</string>
    <string name="Main_Patient_ToDo_Add">추가</string>
    <!-- Main Google Map String -->
    <string name="Main_Map_Location">현재위치</string>
    <!-- Main Medical History String -->
    <string name="Main_Medical_History_Edit">설정화면에서 병력사항을 입력해주세요.</string>
    <!-- Main Menu String -->
    <string name="Main_Menu_Setting">설정</string>
    <string name="Main_Menu_Sync">동기화</string>
    <string name="Main_Menu_Device">장치추가</string>
    <!-- Main Device String -->
    <string name="Main_Device_Heart">심장박동수</string>
    <string name="Main_Device_Battery">배터리 용량</string>
    <string name="Main_Device_SPO2">산소포화도 측정</string>
    <string name="Main_Device_Connection">연결상태</string>
    <string name="Main_Device_Find">디바이스 찾기</string>
    <string name="Main_Device_Finding">디바이스 찾는중</string>
    <!-- Preference String -->
    <string name="Preference_Helper_Information">HELPER INFORMATION</string>
    <string name="Preference_Patient_Information">PATIENT INFORMATION</string>
    <string name="Preference_Patient_State">PATIENT STATE</string>
    <string name="Preference_Developer_Information">DEVELOPER_INFORMATION</string>
    <string name="Preference_Patient_ToDo">PATIENT TODO INFORMATION</string>
    <string name="Preference_Patient_Health">PATIENT HEALTH GRAPH</string>
    <string name="Preference_Device_Information">DEVICE INFORMATION</string>
    <string name="Preference_Helper_Name">- 보호자 이름 설정</string>
    <string name="Preference_Helper_Name_Text">보호자 이름을 설정합니다.</string>
    <string name="Preference_Helper_Address">- 보호자 주소 설정</string>
    <string name="Preference_Helper_Address_Test">보호자 주소을 설정합니다.</string>
    <string name="Preference_Helper_Tel">- 보호자 전화번호 설정</string>
    <string name="Preference_Helper_Tel_Text">보호자 전화번호을 설정합니다.</string>
    <string name="Preference_Helper_Image">- 보호자 사진 설정</string>
    <string name="Preference_Helper_Image_Text">보호자 사진 설정합니다.</string>
    <string name="Preference_Patient_Blood">- 환자 혈액형 설정</string>
    <string name="Preference_Patient_Blood_Text">환자 혈액형을 설정합니다.</string>
    <string name="Preference_Patient_Height">- 환자 신장 설정</string>
    <string name="Preference_Patient_Height_Text">환자 신장 설정을 합니다.</string>
    <string name="Preference_Patient_Weight">- 환자 체중 설정</string>
    <string name="Preference_Patient_Weight_Text">환자 신장 체중을 합니다.</string>
    <string name="Preference_Patient_Medicine">- 환자 복용약 설정</string>
    <string name="Preference_Patient_Medicine_Text">환자 복용약 설정을 합니다.</string>
    <string name="Preference_Patient_Disease">- 환자 질병 설정</string>
    <string name="Preference_Patient_Disease_Text">환자 질병 설정을 합니다.</string>
    <string name="Preference_Patient_Etc">- 환자 기타사항 설정</string>
    <string name="Preference_Patient_Etc_Text">환자 기타사항 설정을 합니다.</string>
    <string name="Preference_Patient_Name">- 환자 이름 설정</string>
    <string name="Preference_Patient_Name_Text">환자 이름 설정을 합니다.</string>
    <string name="Preference_Patient_Age">- 환자 나이 설정</string>
    <string name="Preference_Patient_Age_Text">환자 나이 설정을 합니다.</string>
    <string name="Preference_Patient_Sex">- 환자 성별 설정</string>
    <string name="Preference_Patient_Sex_Text">환자 성별 설정을 합니다.</string>
    <string name="Preference_Patient_Smoking">- 환자 흡연여부 설정</string>
    <string name="Preference_Patient_Smoking_Text">환자 흡연여부 설정을 합니다.</string>
    <string name="Preference_Developer_State">- 개발자 정보</string>
    <string name="Preference_Developer_State_Text">개발자 정보를 확인합니다.</string>
    <string name="Preference_Developer_Email">- 개발자 이메일</string>
    <string name="Preference_Developer_Email_Text">개발자에게 이메일을 보냅니다.</string>
    <string name="Preference_Developer_OpenSource">- 오픈소스 정보</string>
    <string name="Preference_Developer_OpenSource_Text">오픈소스 정보를 확인합니다.</string>
    <!-- First Activity String -->
    <string name="First_Right_Text">Copyright ⓒ Mr.Yang. All Right Reserved</string>
</resources>
