<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Preference Helper Category -->
    <PreferenceCategory
        android:title="@string/Preference_Helper_Information"
        android:key=" Helper_Category">

        <!-- Helper EditText Preference -->
        <EditTextPreference
            android:id="@+id/Preference_Helper_Name"
            android:key="Helper_Name"
            android:title="@string/Preference_Helper_Name"
            android:summary="@string/Preference_Helper_Name_Text"/>

        <EditTextPreference
            android:id="@+id/Preference_Helper_Address"
            android:key="Helper_Address"
            android:title="@string/Preference_Helper_Address"
            android:summary="@string/Preference_Helper_Address_Test"/>

        <EditTextPreference
            android:id="@+id/Preference_Helper_Tel"
            android:key="Helper_Tel"
            android:title="@string/Preference_Helper_Tel"
            android:summary="@string/Preference_Helper_Tel_Text"/>

    </PreferenceCategory>

    <!-- Preference Patient Category -->
    <PreferenceCategory
        android:title="@string/Preference_Patient_Information"
        android:key="Patient_Information">

        <!--  Patient EditText Preference -->
        <EditTextPreference
            android:id="@+id/Preference_Patient_Blood"
            android:key="Patient_Blood"
            android:title="@string/Preference_Patient_Blood"
            android:summary="@string/Preference_Patient_Blood_Text"/>

        <EditTextPreference
            android:id="@+id/Preference_Patient_Height"
            android:key="Patient_Height"
            android:title="@string/Preference_Patient_Height"
            android:summary="@string/Preference_Patient_Height_Text"/>

        <EditTextPreference
            android:id="@+id/Preference_Patient_Weight"
            android:key="Patient_Weight"
            android:title="@string/Preference_Patient_Weight"
            android:summary="@string/Preference_Patient_Weight_Text"/>

        <EditTextPreference
            android:id="@+id/Preference_Patient_Disease"
            android:key="Patient_Disease"
            android:title="@string/Preference_Patient_Disease"
            android:summary="@string/Preference_Patient_Disease_Text"/>

        <EditTextPreference
            android:id="@+id/Preference_Patient_Medicine"
            android:key="Patient_Medicine"
            android:title="@string/Preference_Patient_Medicine"
            android:summary="@string/Preference_Patient_Medicine_Text"/>

    </PreferenceCategory>

</PreferenceScreen>