<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Main AppBarLayout -->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Main ToolBar -->
        <android.support.v7.widget.Toolbar
            android:id="@+id/Main_ToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.AppBarLayout>

    <!-- Main Total ScrollView -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Main LearLayout in ScrollView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Main Helper Information CardView -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/MainHelperImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:minHeight="125dp"
                        android:minWidth="125dp" />

                    <!-- Main Helper Text Layout -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <!-- Patient Introduce TextView -->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/Preference_Helper_Information"
                            android:textColor="@color/colorAccent"/>

                        <!-- Main Helper Name TextView -->
                        <TextView
                            android:id="@+id/MainHelperName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/Main_Helper_Name"
                            android:textColor="@color/colorBasicText" />

                        <!-- Main Helper Address TextView -->
                        <TextView
                            android:id="@+id/MainHelperAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/Main_Helper_Address"
                            android:textColor="@color/colorBasicText" />

                        <!-- Main Helper Tel TextView -->
                        <TextView
                            android:id="@+id/MainHelperTel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/Main_Helper_Tel"
                            android:textColor="@color/colorBasicText" />

                        <!-- Main Helper Call Button -->
                        <Button
                            android:id="@+id/MainHelperCall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:padding="5dp"
                            android:background="@color/colorAccent"
                            android:drawableLeft="@drawable/ic_call_white_24dp"
                            android:text="@string/Main_Helper_Call"
                            android:textColor="@color/colorWhiteText"
                            android:textSize="20sp" />

                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- Main Google Google Map CardView -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <!-- Main Google Map Layout -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <fragment
                        android:id="@+id/MainGoogleMap"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        class="com.google.android.gms.maps.SupportMapFragment"
                        android:name="com.google.android.gms.maps.SupportMapFragment" />

                    <TextView
                        android:id="@+id/MainMapLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#C5CAE9"
                        android:gravity="center"
                        android:text="@string/Main_Map_Location"
                        android:textColor="@color/colorBasicText" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- Main Patient Information CardView -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- Main Patient State Information Layout -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginTop="10dp"
                            android:text="@string/Preference_Patient_State"
                            android:textColor="@color/colorAccent" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/Patient_State_Image"
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:layout_centerInParent="true"
                                android:layout_margin="10dp"
                                android:background="@drawable/ic_circle_green" />

                            <TextView
                                android:id="@+id/Patient_State_Text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:text="@string/Main_Patient_State_1"
                                android:textColor="@color/colorWhiteText"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </RelativeLayout>

                    </LinearLayout>

                    <!-- Main Patient SOS Layout -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/Main_Patient_SOS_Call"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_margin="5dp"
                            android:background="@color/colorPrimary"
                            android:drawableLeft="@drawable/ic_call_white_24dp"
                            android:text="@string/Main_Patient_SOS_Call"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorWhiteText"/>

                        <Button
                            android:id="@+id/Main_Patient_SOS_MMS"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_margin="5dp"
                            android:padding="5dp"
                            android:drawableLeft="@drawable/ic_chat_white_24dp"
                            android:background="@color/colorPrimaryDark"
                            android:text="@string/Main_Patient_SOS_Message"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorWhiteText"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- Health Information Chart CardView -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/Preference_Patient_Health"
                        android:textColor="@color/colorAccent"/>

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/Main_Health_Chart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:minHeight="300dp"
                        android:layout_margin="10dp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- Device Information CardView -->
            <android.support.v7.widget.CardView
                android:id="@+id/Main_Deivce_CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/Preference_Device_Information"
                        android:textColor="@color/colorAccent"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <!-- Main Heart Beat Rate Layout -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/Device_Heart_But"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableTop="@drawable/ic_cardiogram"
                                android:text="@string/Main_Device_Heart"
                                android:textSize="20sp"
                                android:background="#00FFFFFF" />
                        </LinearLayout>

                        <!-- Main Charge, Connection, Find Layout -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/Device_Battery_But"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="#00FFFFFF"
                                android:drawableLeft="@drawable/ic_battery"
                                android:text="@string/Main_Device_Battery"
                                android:textSize="20sp"/>
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- ToDo RecyclerView -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/colorAccent"
                        android:text="@string/Preference_Patient_ToDo" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/MainToDoEdit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:hint="@string/Main_Patient_ToDo_Hint"/>

                        </android.support.design.widget.TextInputLayout>

                        <ImageButton
                            android:id="@+id/MainToDoAdd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:src="@drawable/ic_addition_symbol"
                            android:background="@color/button_text_color"/>

                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/Main_Patient_ToDo_Recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- Main Medical History CardView -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/Preference_Patient_Information"
                        android:textColor="@color/colorAccent"/>

                    <TextView
                        android:id="@+id/Main_Medical_History"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/Main_Medical_History_Edit"
                        android:textColor="@color/colorBasicText"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>